# crossfilter-dataframe

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
crossfilter_dataframe/: __init__.py  crossfilter.py  logger.py  main.py  manager.py  network_loader.py  relational_processor.py  types.py
crossfilter_dataframe/graphs/: types.py  utils.py
crossfilter_dataframe/graphs/dag/: __init__.py  executor.py  processor.py  utils.py
crossfilter_dataframe/graphs/loader/: __init__.py  base.py  loader.py
crossfilter_dataframe/graphs/loaders/: __init__.py  base.py  loaders.py
crossfilter_dataframe/tables/: __init__.py  base.py  manager.py  pandas_dataframe.py  snowpark_api.py  table_protocol.py  tables_manager.py  types.py
tests/: test_crossfilter.py  test_manager.py
tests/examples/: example1.json  example1.yaml  many-to-one.yaml  one-to-many.yaml  test_table.py
tests/examples/specs/: 3-1-1.yaml  diff-pkeys-fkeys.yaml  example1.yaml
tests/graphs/: examples_fixtures.py  test_loader.py  test_processor.py
tests/tables/: dataframes.py  test_crossfilter_dataframe.py  test_pandas.py  test_protocols.py
