[tool.poetry]
name = "crossfilter-dataframe"
version = "0.1.0"
description = ""
authors = ["Toby <40096033+tobytoyin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
networkx = "^3.1"
matplotlib = "^3.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
