[tool.poetry]
name = "crossfilter-dataframe"
version = "0.1.0"
description = "Provides a simplified way to filter down relational data"
authors = ["Toby <40096033+tobytoyin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
networkx = "^3.1"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
